<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="MOD_InputBelt_Q_stRequest" Id="{cbbf5d59-4e2b-4cfd-8f95-0ca2a14b1517}">
    <Declaration><![CDATA[TYPE MOD_InputBelt_Q_stRequest :
STRUCT
	NewBox : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>