<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="MOD_WeighBridge_I_stDefinitions" Id="{19cdf2cf-f028-4407-9769-f438d1fbefe5}">
    <Declaration><![CDATA[TYPE MOD_WeighBridge_I_stDefinitions :
STRUCT
	WeightLimit : INT;
	OperatingWeight : INT;
	DetractorWeight : INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>