<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="FB3_Modules" Id="{54cc7670-8201-4bdf-a347-fc97717409df}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB3_Modules
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	newboxdump : BOOL;
	WeighbridgeDefinitions : MOD_WeighBridge_I_stDefinitions;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Parts.Belt(Commandstate := Command.Executing,
	NewBox => newboxdump);
	
WeighbridgeDefinitions.DetractorWeight := 60;
WeighbridgeDefinitions.OperatingWeight := 1000;
WeighbridgeDefinitions.WeightLimit := 6000; // needs to be set by external source like HMI	
Parts.Weighbridge(Definitions := WeighbridgeDefinitions);
	
Parts.Crane(LoadGrabbed := Parts.Crane.Grab, //needs to go to a grabber
	Commandstate := Command.Executing);
	
	
	]]></ST>
    </Implementation>
    <LineIds Name="FB3_Modules">
      <LineId Id="9" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="20" Count="2" />
      <LineId Id="18" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="14" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>